# phantomscan

./: LICENSE  README.md  ai_dataset.json  pyproject.toml  security_platform.db  setup.py
phantomscan/: ai_dataset.json  json  loader.py  main.py  main.py.save  main.py.save.1  main.py.save.2  security_platform.db
phantomscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
phantomscan/ai_engine/: explainer.py  false_positive_filter.py  feature_engineering.py  retrain_trigger.py  severity_model.pkl  train_model.py  vuln_classifier.py
phantomscan/config/: scope.json
phantomscan/core/: autonomous_loop.py  classifier.py  scope.py
phantomscan/dashboard/: app.py  ui.py  ui.py.save
phantomscan/engine/: vulnerability_engine.py
phantomscan/modules/: idor_engine.py
phantomscan/recon/: http_detect.py  nmap_scan.py
phantomscan/reports/: advanced_report.py  report_10990.md  report_11447.md  report_12413.md  report_13570.md  report_15394.md  report_15430.md  report_15599.md  report_15722.md  report_18682.md  report_20730.md  report_24184.md  report_24350.md  report_2478.md  report_25030.md  report_29765.md  report_30672.md  report_38565.md  report_38994.md  report_42332.md  report_48009.md  report_51659.md  report_52389.md  report_53816.md  report_54010.md  report_54283.md  report_59436.md  report_60014.md  report_61871.md  report_62328.md  report_63984.md  report_6825.md  (+35 more)
reports/: phantomscan_20260516_010427.html  phantomscan_20260518_001754.html  phantomscan_20260519_001335.html  phantomscan_20260519_002216.html  phantomscan_20260519_022411.html
(+15 files in other folders)
